# RPCDataloader

./: .buildinfo  README.rst  api.html  examples.html  genindex.html  index.html  objects.inv  py-modindex.html  pyproject.toml  search.html  searchindex.js  setup.py  sitemap.xml
.doctrees/: api.doctree  environment.pickle  examples.doctree  index.doctree
.github/workflows/: tests.yml
_sources/: examples.rst.txt  index.rst.txt
_static/: documentation_options.js
doc/: conf.py
docs/: api.rst  conf.py  example_rpc.py  example_rpc.slurm  examples.rst  index.rst
rpcdataloader/: __init__.py  dataloader.py  launch.py  pinned_buffer.c  rpc.py  utils.py
tests/: test_dataloader.py  test_future.py  test_rpc.py
